Add unit tests for utils.R
Also other minor changes:
* Add bench to Suggests
* Fix a bug in check_api()
* Remove unused argument from parse_response()

Solves #2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ RoxygenNote: 7.2.3
 URL: https://riksrevisjonen.github.io/noAPI/
 BugReports: https://github.com/worldbank/pipr/issues
 Suggests:
+    bench,
     covr,
     callr,
     knitr,
