Add handling of multiple pages
* Add parse_kartverket() to handle responses with mulitiple pages
* Add utils and rlang to Imports
* Add more unit tests
* Improve CRS handling

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,11 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0)
 Imports:
+    utils,
     cli,
     httr2,
     purrr,
+    rlang,
     memoise,
     cachem
 VignetteBuilder: knitr
