--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(find_address_from_point,numeric)
 export(find_address_from_point)
 export(get_address_info)
 export(get_counties)
+export(get_countries)
 export(get_entity)
 export(get_exchange_rate)
 export(get_municipalities)
