--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(find_address_from_point,list)
 S3method(find_address_from_point,numeric)
 export(find_address_from_point)
 export(get_address_info)
+export(get_adm_units)
 export(get_counties)
 export(get_countries)
 export(get_entity)
