--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ export(get_entity)
 export(get_exchange_rate)
 export(get_municipalities)
 export(get_roles)
+export(get_schools)
 import(httr2)
 importFrom(utils,read.csv2)
