Add SIC functions to Klass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_counties)
 export(get_countries)
 export(get_entity)
 export(get_exchange_rate)
+export(get_industrial_codes)
 export(get_municipalities)
 export(get_roles)
 import(httr2)
