--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_countries)
 export(get_entity)
 export(get_exchange_rate)
 export(get_industrial_codes)
+export(get_kindergartens)
 export(get_municipalities)
 export(get_roles)
 export(get_schools)
