Add function to retrieve ready-made tables from SSB

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,8 @@ export(get_kindergartens)
 export(get_municipalities)
 export(get_roles)
 export(get_schools)
+export(get_ssb_metadata)
+export(get_ssb_metadata_tags)
+export(get_ssb_table)
 import(httr2)
 importFrom(utils,read.csv2)
