Add function to retrieve ready-made tables from SSB (#57)
* Add function to retrieve ready-made tables from SSB
* Fix notes in R CMD Check
* Add JSN as contributor
* Update GHA workflow
* Bump minimum R version to 4.3

---------

Co-authored-by: Joachim Sandnes <jsn@riksrevisjonen.no>
Co-authored-by: Aleksander Eilertsen <a.eilertsen@pm.me>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 0.1.0.9000
 Authors@R: c(
     person("Ove Haugland", "Jakobsen", role = c("aut", "cre"), email = "ohj@riksrevisjonen.no"),
     person("Aleksander", "Eilertsen", role = "aut", email = "ale@riksrevisjonen.no"),
+    person("Joachim", "Sandnes", role = "ctb", email = "jsn@riksrevisjonen.no"),
     person(family = "Riksrevisjonen", role = "cph"))
 Description: Retrive data from public Norwegian APIs through 
     easy-to-use functions.
@@ -13,8 +14,8 @@ Language: en-GB
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://riksrevisjonen.github.io/noAPI/
-BugReports: https://riksrevisjonen.github.io/noAPI/issues
+URL: https://github.com/Riksrevisjonen/noAPI, https://riksrevisjonen.github.io/noAPI/
+BugReports: https://github.com/Riksrevisjonen/noAPI/issues
 Suggests:
     bench,
     covr,
@@ -35,4 +36,4 @@ Imports:
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Depends:
-    R (>= 4.1)
+    R (>= 4.3)
