--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(find_address_from_point,list)
 S3method(find_address_from_point,numeric)
+export(count_ssb_tags)
 export(find_address_from_point)
 export(get_address_info)
 export(get_adm_units)
@@ -14,5 +15,7 @@ export(get_kindergartens)
 export(get_municipalities)
 export(get_roles)
 export(get_schools)
+export(get_ssb_metadata)
+export(get_ssb_table)
 import(httr2)
 importFrom(utils,read.csv2)
